# payment_wallet_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt  setup.cfg
api/: celery.py  urls.py  wsgi.py
api/apps/payments/: errors.py  serializers.py  tasks.py  urls.py
api/apps/payments/migrations/: 0001_initial.py  0002_bankaccount_is_verified.py  0003_remove_bankaccount_is_verified.py  0004_remove_bankaccount_amount_and_more.py  0005_rename_account_id_bankaccounttoken_account.py  0006_remove_paymentrequest_beneficiary_account_number_and_more.py  0007_bankaccounttoken_refresh_token_expiry.py  0008_alter_paymentrequest_status.py  0009_bankaccount__account_id_data_and_more.py  0010_alter_paymentrequest_stitch_ref.py  0011_alter_paymentrequest_options.py  0012_alter_transaction_running_balance_and_more.py  0013_alter_paymentrequestevent_options.py  0014_alter_bankaccounttoken_account.py
api/apps/payments/models/: __init__.py  bank_account.py  payment_request.py  wallet.py
api/apps/payments/serializers/: linkpay.py  payments.py
api/apps/payments/views/: linkpay.py  (+2 more)
api/apps/users/: models.py  serializers.py  urls.py  views.py
api/apps/wallets/: models.py
api/config/: __init__.py  common.py  local.py  production.py
api/throttling/: UserLoginRateThrottle.py
api/utils/: code_generator.py  enums.py  permissions.py  webhook.py
api/utils/exceptions/: custom.py  drf.py
api/utils/mixins/: models.py
docker/nginx/: default.conf
docker/scripts/: run_api.sh  run_celery_beat.sh  run_celery_worker.sh  wait_for_postgres.py
scripts/: run_api.sh
(+13 files in other folders)
